--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "ckeditor4-vue": "^1.1.0",
         "sweetalert": "^2.1.2",
         "vue-router": "^3.3.4",
         "vuex": "^3.4.0"
